sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/Fulcrum_BOM_Line__c.object-meta.xml
<CustomObject>
    <description
  >Bill of Materials line items for MarginArc margin recommendations</description>
    <label>MarginArc BOM Line</label>
    <nameField>
        <displayFormat>BOM-{0000}</displayFormat>
        <label>BOM Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MarginArc BOM Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>