sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/BOM_Origin__c.field-meta.xml
<CustomField>
    <fullName>BOM_Origin__c</fullName>
    <description>How the BOM was created (generated or manual)</description>
    <label>BOM Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>