sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >BOM line category (Hardware, Software, Services, Support, Cloud)</description>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>