sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Display label for the BOM line item</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>