sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <description>Total cost (Unit Cost x Quantity)</description>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>