sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Key__c</fullName>
    <description
  >Unique key for this BOM line (e.g. hardware-server)</description>
    <label>Line Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>