sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Margin_Pct__c</fullName>
    <description>Planned margin percentage for this line item</description>
    <label>Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>