sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Optional note or comment for this BOM line</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>