sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Parent Opportunity for this BOM line item</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>BOM Lines</relationshipLabel>
    <relationshipName>BOM_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>