sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>OEM/vendor product or SKU number</description>
    <label>Product Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>