sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Recommended_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Margin_Pct__c</fullName>
    <description
  >MarginArc-recommended margin percentage for this line item</description>
    <label>Recommended Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>