sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit of measure (ea, hr, mo, yr, etc.)</description>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>