sfdc/force-app/main/default/objects/Fulcrum_BOM_Line__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>OEM or vendor name for this line item</description>
    <label>Vendor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>